# ChangeLog for app-text/apvlv
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Dec 2009; James Rowe <jnrowe@gmail.com> -apvlv-0.0.7.4.ebuild,
  apvlv-0.0.7.5.ebuild:
  Keyworded x86.

  22 Dec 2009; James Rowe <jnrowe@gmail.com> apvlv-0.0.7.5.ebuild:
  Keyworded amd64.

  14 Dec 2009; James Rowe <jnrowe@gmail.com> apvlv-0.0.8.1.ebuild,
  +files/apvlv-0.0.8.1-automagic_djvu.patch:
  Fix automagic djvu dependency [2ca]. Thanks to Jake Archer for reporting.

*apvlv-0.0.8.1 (12 Dec 2009)

  12 Dec 2009; James Rowe <jnrowe@gmail.com> +apvlv-0.0.8.1.ebuild:
  Version bump [cf8].

  06 Dec 2009; James Rowe <jnrowe@gmail.com> apvlv-0.0.7.4.ebuild,
  apvlv-0.0.7.5.ebuild:
  Fixed invalid man page install path [3a1].  Thanks to Matthew Turner for
  reporting.

*apvlv-0.0.7.5 (22 Nov 2009)

  22 Nov 2009; James Rowe <jnrowe@gmail.com> +apvlv-0.0.7.5.ebuild:
  Version bump [2fe].

  14 Nov 2009; James Rowe <jnrowe@gmail.com> apvlv-0.0.7.4.ebuild,
  +files/apvlv-0.0.7.4-build_fixes.patch:
  Fixed data files install location [485].

  12 Nov 2009; James Rowe <jnrowe@gmail.com> apvlv-0.0.7.4.ebuild:
  Keyworded x86.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> apvlv-0.0.7.4.ebuild:
  Keyworded amd64.

  13 Oct 2009; James Rowe <jnrowe@gmail.com> apvlv-0.0.7.4.ebuild:
  Keyworded ~x86 [5d1].

*apvlv-0.0.7.4 (13 Oct 2009)

  13 Oct 2009; James Rowe <jnrowe@gmail.com> +apvlv-0.0.7.4.ebuild,
  +metadata.xml:
  Initial ebuild. by me.
