@@ -5,14 +5,16 @@ AUX apvlv-0.0.7.4-build_fixes.patch 1943 RMD160 76511f0e9ec2eac8d7a8af70ca9084cc
 AUX apvlv-0.0.8.1-automagic_djvu.patch 1063 RMD160 877277040ee456d50e71836d4df472f245d6582a SHA1 6fa01603f438dbdd2c6b07168354e58e42af68ca SHA256 a421373a3ded2e8e323be193f4ad5df456958670c3bc92fb3abcf8ddd9dbbb0b
 DIST apvlv-0.0.7.5.tar.gz 201835 RMD160 cd2342641be9416cfac68696571577863f246e3f SHA1 be066e2ef0aa458a390a1dae2ae8b9bb29b86c14 SHA256 07a42ece73a2d5e3fe84eb402c2ad48b6da5d41639a6c09d4c2460bb68f166d0
 DIST apvlv-0.0.8.1.tar.gz 205664 RMD160 cd481fdf15085ec5f1658677444181f854a218d4 SHA1 dbf2e943d28376dc4fe2df07af5c50f145f09ff7 SHA256 c39fa6891bde415ea39567455ba2511b65e9192d38db6c32e12bcd4161b89fcf
+DIST apvlv-0.0.9.tar.gz 209549 RMD160 01b6025cc88348f9f1edad3fe4227a215918f4bd SHA1 11d535f182b84cebf5ff7307328c1f1ca81de9a2 SHA256 f49353ea91b00e2cc8c1c7c1ee82aff0eedf60a81384b3232182492c916721b3
 EBUILD apvlv-0.0.7.5.ebuild 808 RMD160 642d1f6708e921a33b665a4e56373c7d8467b9bd SHA1 2445d76cad98ffacd4ecfb2076d205b7bcadcd5b SHA256 cb7b055296339a35a77255f1c28a926fa65604b807bdb4bcfd333b597b7f83a8
 EBUILD apvlv-0.0.8.1.ebuild 910 RMD160 635c90b91a0fdee0dbc0ddcdc21e659765d78935 SHA1 9c4446b323dc5cd97329a0dfb47d678e38557811 SHA256 a14f095d90b58749085c8ece5f35c21bf7b2dac77a383bac025aabfbcc38932e
-MISC ChangeLog 1481 RMD160 a16046cf6c729e2954fa5b15ea86f872c29f865f SHA1 2c789dba2eb42ab45a495e75223a53f9cb25a87a SHA256 d7112c02004a393bbeb20b015ec1501c2585e7e82cb13b139eef2917f5169783
+EBUILD apvlv-0.0.9.ebuild 862 RMD160 171f84c47e0ab6fe944c563c62e089cbc140c2b9 SHA1 d35d76fa7a79a90447fa50a540e2fb222ea599f5 SHA256 1a449d252a91a423253c7787b309df208beef9ec58f271eabe63dd0d72dd1b4c
+MISC ChangeLog 1598 RMD160 350a4f22c6f4ecaa9fbff62fcaa14312bcbb9bfb SHA1 fbc3a5a757118212b165a9253efb62a217447e2c SHA256 8ac7f074a803a0fbfdc7b9ff0ac17cda040344b193a1d4fa8b754d0ff3c3fe37
 MISC metadata.xml 919 RMD160 7f7fd28b8f31036ae2e79582b340dc158bce0900 SHA1 748eb038d1b0ed602d650e06660634f57a67b2e3 SHA256 bc06e34e522dce7b176c2feb6af45228d034c27a36931ac533fc387832aacf1c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkswHIQACgkQzJrj3cAXR0nXwgCfQkfkoOeNaQDd4tV/n8ESqZuw
-/UEAn2ygNnxsgFUUwdryFha4rqrMAdv1
-=FhDv
+iEUEARECAAYFAktHGo0ACgkQzJrj3cAXR0nzrQCYo8prH5qVuJTt+cjSxUyHaKtQ
+/QCdEO8xdEqfUF/dLvYwvs0ESkWLx0I=
+=s7sY
 -----END PGP SIGNATURE-----
