@@ -1,0 +1,22 @@
+dev-util/pkgconfig =sys-devel/automake-1.10* >=sys-devel/autoconf-2.61 sys-devel/libtool
+virtual/poppler-glib x11-libs/gtk+:2 djvu? ( app-text/djvu )
+0
+http://apvlv.googlecode.com/files/apvlv-0.0.9.tar.gz
+
+http://code.google.com/p/apvlv/
+GPL-2
+apvlv is a PDF Viewer which behaves like Vim
+~amd64 ~x86
+autotools eutils libtool multilib portability toolchain-funcs
+djvu
+
+
+
+2
+
+configure install prepare
+
+
+
+
+
